SAC/parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: DEF_LIST

    2 DEF_LIST: /* empty */
    3         | DEF DEF_LIST

    4 CMD_LIST: /* empty */
    5         | CMD_OR_COMMENT CMD_LIST

    6 DEF: TYPE ID '(' VARDEC_LIST ')' AFUNCDEF '{' CMD_LIST '}'
    7    | TYPE ID '(' VARDEC_LIST ')' '{' CMD_LIST '}'
    8    | TYPE ID '(' ')' AFUNCDEF '{' CMD_LIST '}'
    9    | TYPE ID '(' ')' '{' CMD_LIST '}'
   10    | TYPE ID '(' VARDEC_LIST ')' AFUNCDEF ';'
   11    | TYPE ID '(' VARDEC_LIST ')' ';'
   12    | TYPE ID '(' ')' AFUNCDEF ';'
   13    | TYPE ID '(' ')' ';'
   14    | ASEPDEF
   15    | TM_UNION ID '{' FIELD_DEC_LIST '}' ';'
   16    | TM_ENUM ID '{' ENUM_LIST '}' ';'
   17    | TM_STRUCT ID '{' FIELD_DEC_LIST '}' ';'
   18    | VARDEC ';'

   19 TYPE: VOID
   20     | CHAR
   21     | U8
   22     | INT
   23     | INT64
   24     | UINT
   25     | UINT64
   26     | TM_STRUCT ID
   27     | TM_UNION ID
   28     | TM_ENUM ID
   29     | TYPE ID '[' EXPRTYPE ']'
   30     | TYPE '*'

   31 CMD_OR_COMMENT: CMDTYPE
   32               | TM_COMMENT RASSERTION TM_NEWLINE
   33               | COMMENT_HEADER RASSERTION COMMENT_TAIL

   34 BLOCK: '{' CMD_LIST '}'

   35 CMDTYPE: BLOCK
   36        | VARDEC ';'
   37        | SIMPLECMD ';'
   38        | TM_IF '(' EXPRTYPE ')' CMDTYPE
   39        | TM_IF '(' EXPRTYPE ')' CMDTYPE TM_ELSE CMDTYPE
   40        | TM_WHILE '(' EXPRTYPE ')' CMDTYPE
   41        | TM_DO CMDTYPE TM_WHILE EXPRTYPE ';'
   42        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_WHILE '(' EXPRTYPE ')' CMDTYPE
   43        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_DO CMDTYPE TM_WHILE EXPRTYPE ';'
   44        | TM_SWITCH EXPRTYPE '{' CASE_LIST '}'
   45        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_FOR '(' SIMPLECMD ';' EXPRTYPE ';' SIMPLECMD ')' CMDTYPE
   46        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_FOR '(' SIMPLECMD ';' EXPRTYPE ';' ')' CMDTYPE
   47        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_FOR '(' SIMPLECMD ';' ';' SIMPLECMD ')' CMDTYPE
   48        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_FOR '(' SIMPLECMD ';' ';' ')' CMDTYPE
   49        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_FOR '(' ';' EXPRTYPE ';' SIMPLECMD ')' CMDTYPE
   50        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_FOR '(' ';' EXPRTYPE ';' ')' CMDTYPE
   51        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_FOR '(' ';' ';' SIMPLECMD ')' CMDTYPE
   52        | TM_COMMENT TM_INV RASSERTION TM_NEWLINE TM_FOR '(' ';' ';' ')' CMDTYPE
   53        | TM_FOR '(' SIMPLECMD ';' EXPRTYPE ';' SIMPLECMD ')' CMDTYPE
   54        | TM_FOR '(' SIMPLECMD ';' EXPRTYPE ';' ')' CMDTYPE
   55        | TM_FOR '(' SIMPLECMD ';' ';' SIMPLECMD ')' CMDTYPE
   56        | TM_FOR '(' SIMPLECMD ';' ';' ')' CMDTYPE
   57        | TM_FOR '(' ';' EXPRTYPE ';' SIMPLECMD ')' CMDTYPE
   58        | TM_FOR '(' ';' EXPRTYPE ';' ')' CMDTYPE
   59        | TM_FOR '(' ';' ';' SIMPLECMD ')' CMDTYPE
   60        | TM_FOR '(' ';' ';' ')' CMDTYPE
   61        | TM_BREAK ';'
   62        | TM_CONTINUE ';'
   63        | TM_RETURN EXPRTYPE ';'
   64        | TM_RETURN ';'
   65        | ';'

   66 SIMPLECMD: EXPRTYPE
   67          | EXPRTYPE '=' EXPRTYPE
   68          | EXPRTYPE ADD_EQ EXPRTYPE
   69          | EXPRTYPE SUB_EQ EXPRTYPE
   70          | EXPRTYPE MUL_EQ EXPRTYPE
   71          | EXPRTYPE DIV_EQ EXPRTYPE
   72          | EXPRTYPE MOD_EQ EXPRTYPE
   73          | EXPRTYPE BAND_EQ EXPRTYPE
   74          | EXPRTYPE BOR_EQ EXPRTYPE
   75          | EXPRTYPE XOR_EQ EXPRTYPE
   76          | EXPRTYPE SHL_EQ EXPRTYPE
   77          | EXPRTYPE SHR_EQ EXPRTYPE
   78          | INCREASE EXPRTYPE
   79          | DECREASE EXPRTYPE
   80          | EXPRTYPE INCREASE
   81          | EXPRTYPE DECREASE

   82 VARDEC: TYPE ID

   83 VARDEC_LIST: VARDEC
   84            | VARDEC_LIST ',' VARDEC

   85 EXPRTYPE: NAT
   86         | '(' EXPRTYPE ')'
   87         | ID
   88         | '-' EXPRTYPE
   89         | '+' EXPRTYPE
   90         | '!' EXPRTYPE
   91         | '~' EXPRTYPE
   92         | EXPRTYPE '+' EXPRTYPE
   93         | EXPRTYPE '-' EXPRTYPE
   94         | EXPRTYPE '*' EXPRTYPE
   95         | EXPRTYPE '/' EXPRTYPE
   96         | EXPRTYPE '%' EXPRTYPE
   97         | EXPRTYPE '<' EXPRTYPE
   98         | EXPRTYPE '>' EXPRTYPE
   99         | EXPRTYPE LE EXPRTYPE
  100         | EXPRTYPE GE EXPRTYPE
  101         | EXPRTYPE EQ EXPRTYPE
  102         | EXPRTYPE NE EXPRTYPE
  103         | EXPRTYPE AND EXPRTYPE
  104         | EXPRTYPE OR EXPRTYPE
  105         | EXPRTYPE '&' EXPRTYPE
  106         | EXPRTYPE '|' EXPRTYPE
  107         | EXPRTYPE '^' EXPRTYPE
  108         | EXPRTYPE SHL EXPRTYPE
  109         | EXPRTYPE SHR EXPRTYPE
  110         | ID '(' EXPR_LIST ')'
  111         | ID '(' ')'
  112         | SIZEOF '(' TYPE ')'
  113         | '*' EXPRTYPE
  114         | '&' EXPRTYPE
  115         | '(' TYPE ')' EXPRTYPE
  116         | EXPRTYPE '[' EXPRTYPE ']'
  117         | EXPRTYPE '.' ID
  118         | EXPRTYPE TM_FIELDOFPTR ID

  119 EXPR_LIST: EXPRTYPE
  120          | EXPRTYPE ',' EXPR_LIST

  121 CASE_LIST: /* empty */
  122          | CASE_OR_DEFAULT CASE_LIST

  123 CASE_OR_DEFAULT: TM_CASE EXPRTYPE ':' CMD_LIST
  124                | TM_DEFAULT ':' CMD_LIST

  125 ENUM_LIST: ID
  126          | ID ',' ENUM_LIST

  127 AFUNCDEF: COMMENT_HEADER WITH VAR_LIST REQUIRE RASSERTION ENSURE RASSERTION COMMENT_TAIL
  128         | COMMENT_HEADER REQUIRE RASSERTION ENSURE RASSERTION COMMENT_TAIL

  129 ASEPDEF: COMMENT_HEADER LET ID '(' EXPR_LIST ')' '=' RASSERTION COMMENT_TAIL
  130        | TM_COMMENT LET ID '(' EXPR_LIST ')' '=' RASSERTION TM_NEWLINE

  131 FIELD_DEC_LIST: /* empty */
  132               | FIELD_DEC FIELD_DEC_LIST

  133 FIELD_DEC: TYPE ID ';'

  134 VAR_LIST: /* empty */
  135         | ID VAR_LIST

  136 RA_LIST: RASSERTION
  137        | RASSERTION ',' RA_LIST

  138 RASSERTION: '(' RASSERTION ')'
  139           | NAT
  140           | __RETURN
  141           | ID
  142           | ID '(' RA_LIST ')'
  143           | RASSERTION '+' RASSERTION
  144           | RASSERTION '-' RASSERTION
  145           | RASSERTION '*' RASSERTION
  146           | RASSERTION '/' RASSERTION
  147           | RASSERTION '%' RASSERTION
  148           | RASSERTION '<' RASSERTION
  149           | RASSERTION '>' RASSERTION
  150           | RASSERTION LE RASSERTION
  151           | RASSERTION GE RASSERTION
  152           | RASSERTION EQ RASSERTION
  153           | RASSERTION NE RASSERTION
  154           | RASSERTION AND RASSERTION
  155           | RASSERTION OR RASSERTION
  156           | RASSERTION '&' RASSERTION
  157           | RASSERTION '|' RASSERTION
  158           | RASSERTION '^' RASSERTION
  159           | RASSERTION SHL RASSERTION
  160           | RASSERTION SHR RASSERTION
  161           | '-' RASSERTION
  162           | '+' RASSERTION
  163           | '!' RASSERTION
  164           | '~' RASSERTION
  165           | '*' RASSERTION
  166           | '&' RASSERTION
  167           | '(' TYPE ')' RASSERTION
  168           | RASSERTION '[' RASSERTION ']'
  169           | RASSERTION '.' ID
  170           | RASSERTION TM_FIELDOFPTR ID
  171           | FORALL ID ',' RASSERTION
  172           | EXISTS ID ',' RASSERTION


Terminals, with rules where they appear

$end (0) 0
'!' (33) 90 163
'%' (37) 96 147
'&' (38) 105 114 156 166
'(' (40) 6 7 8 9 10 11 12 13 38 39 40 42 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 86 110 111 112 115 129 130 138 142 167
')' (41) 6 7 8 9 10 11 12 13 38 39 40 42 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 86 110 111 112 115 129 130 138 142 167
'*' (42) 30 94 113 145 165
'+' (43) 89 92 143 162
',' (44) 84 120 126 137 171 172
'-' (45) 88 93 144 161
'.' (46) 117 169
'/' (47) 95 146
':' (58) 123 124
';' (59) 10 11 12 13 15 16 17 18 36 37 41 43 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62 63 64 65 133
'<' (60) 97 148
'=' (61) 67 129 130
'>' (62) 98 149
'[' (91) 29 116 168
']' (93) 29 116 168
'^' (94) 107 158
'{' (123) 6 7 8 9 15 16 17 34 44
'|' (124) 106 157
'}' (125) 6 7 8 9 15 16 17 34 44
'~' (126) 91 164
error (256)
NAT (258) 85 139
ID (259) 6 7 8 9 10 11 12 13 15 16 17 26 27 28 29 82 87 110 111 117
    118 125 126 129 130 133 135 141 142 169 170 171 172
__RETURN (260) 140
TM_FIELDOFPTR (261) 118 170
SIZEOF (262) 112
LE (263) 99 150
GE (264) 100 151
EQ (265) 101 152
NE (266) 102 153
AND (267) 103 154
OR (268) 104 155
SHL (269) 108 159
SHR (270) 109 160
INCREASE (271) 78 80
DECREASE (272) 79 81
TM_COMMENT (273) 32 42 43 45 46 47 48 49 50 51 52 130
COMMENT_HEADER (274) 33 127 128 129
COMMENT_TAIL (275) 33 127 128 129
ADD_EQ (276) 68
SUB_EQ (277) 69
MUL_EQ (278) 70
DIV_EQ (279) 71
MOD_EQ (280) 72
BAND_EQ (281) 73
BOR_EQ (282) 74
XOR_EQ (283) 75
SHL_EQ (284) 76
SHR_EQ (285) 77
WITH (286) 127
REQUIRE (287) 127 128
ENSURE (288) 127 128
FORALL (289) 171
EXISTS (290) 172
TM_INV (291) 42 43 45 46 47 48 49 50 51 52
LET (292) 129 130
VOID (293) 19
CHAR (294) 20
INT (295) 22
INT64 (296) 23
U8 (297) 21
UINT (298) 24
UINT64 (299) 25
TM_IF (300) 38 39
TM_ELSE (301) 39
TM_WHILE (302) 40 41 42 43
TM_DO (303) 41 43
TM_SWITCH (304) 44
TM_CASE (305) 123
TM_DEFAULT (306) 124
TM_FOR (307) 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
TM_CONTINUE (308) 62
TM_BREAK (309) 61
TM_RETURN (310) 63 64
TM_STRUCT (311) 17 26
TM_UNION (312) 15 27
TM_ENUM (313) 16 28
TM_NEWLINE (314) 32 42 43 45 46 47 48 49 50 51 52 130


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
NT_WHOLE (84)
    on left: 1, on right: 0
DEF_LIST (85)
    on left: 2 3, on right: 1 3
CMD_LIST (86)
    on left: 4 5, on right: 5 6 7 8 9 34 123 124
DEF (87)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 3
TYPE (88)
    on left: 19 20 21 22 23 24 25 26 27 28 29 30, on right: 6 7 8 9
    10 11 12 13 29 30 82 112 115 133 167
CMD_OR_COMMENT (89)
    on left: 31 32 33, on right: 5
BLOCK (90)
    on left: 34, on right: 35
CMDTYPE (91)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59 60 61 62 63 64 65, on right: 31 38 39 40 41
    42 43 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
SIMPLECMD (92)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81,
    on right: 37 45 46 47 48 49 51 53 54 55 56 57 59
VARDEC (93)
    on left: 82, on right: 18 36 83 84
VARDEC_LIST (94)
    on left: 83 84, on right: 6 7 10 11 84
EXPRTYPE (95)
    on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
   , on right: 29 38 39 40 41 42 43 44 45 46 49 50 53 54 57 58 63 66
    67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 86 88 89 90 91 92
    93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 113
    114 115 116 117 118 119 120 123
EXPR_LIST (96)
    on left: 119 120, on right: 110 120 129 130
CASE_LIST (97)
    on left: 121 122, on right: 44 122
CASE_OR_DEFAULT (98)
    on left: 123 124, on right: 122
ENUM_LIST (99)
    on left: 125 126, on right: 16 126
AFUNCDEF (100)
    on left: 127 128, on right: 6 8 10 12
ASEPDEF (101)
    on left: 129 130, on right: 14
FIELD_DEC_LIST (102)
    on left: 131 132, on right: 15 17 132
FIELD_DEC (103)
    on left: 133, on right: 132
VAR_LIST (104)
    on left: 134 135, on right: 127 135
RA_LIST (105)
    on left: 136 137, on right: 137 142
RASSERTION (106)
    on left: 138 139 140 141 142 143 144 145 146 147 148 149 150 151
    152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167
    168 169 170 171 172, on right: 32 33 42 43 45 46 47 48 49 50 51
    52 127 128 129 130 136 137 138 143 144 145 146 147 148 149 150
    151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166
    167 168 169 170 171 172


state 0

    0 $accept: . NT_WHOLE $end

    TM_COMMENT      shift, and go to state 1
    COMMENT_HEADER  shift, and go to state 2
    VOID            shift, and go to state 3
    CHAR            shift, and go to state 4
    INT             shift, and go to state 5
    INT64           shift, and go to state 6
    U8              shift, and go to state 7
    UINT            shift, and go to state 8
    UINT64          shift, and go to state 9
    TM_STRUCT       shift, and go to state 10
    TM_UNION        shift, and go to state 11
    TM_ENUM         shift, and go to state 12

    $default  reduce using rule 2 (DEF_LIST)

    NT_WHOLE  go to state 13
    DEF_LIST  go to state 14
    DEF       go to state 15
    TYPE      go to state 16
    VARDEC    go to state 17
    ASEPDEF   go to state 18


state 1

  130 ASEPDEF: TM_COMMENT . LET ID '(' EXPR_LIST ')' '=' RASSERTION TM_NEWLINE

    LET  shift, and go to state 19


state 2

  129 ASEPDEF: COMMENT_HEADER . LET ID '(' EXPR_LIST ')' '=' RASSERTION COMMENT_TAIL

    LET  shift, and go to state 20


state 3

   19 TYPE: VOID .

    $default  reduce using rule 19 (TYPE)


state 4

   20 TYPE: CHAR .

    $default  reduce using rule 20 (TYPE)


state 5

   22 TYPE: INT .

    $default  reduce using rule 22 (TYPE)


state 6

   23 TYPE: INT64 .

    $default  reduce using rule 23 (TYPE)


state 7

   21 TYPE: U8 .

    $default  reduce using rule 21 (TYPE)


state 8

   24 TYPE: UINT .

    $default  reduce using rule 24 (TYPE)


state 9

   25 TYPE: UINT64 .

    $default  reduce using rule 25 (TYPE)


state 10

   17 DEF: TM_STRUCT . ID '{' FIELD_DEC_LIST '}' ';'
   26 TYPE: TM_STRUCT . ID

    ID  shift, and go to state 21


state 11

   15 DEF: TM_UNION . ID '{' FIELD_DEC_LIST '}' ';'
   27 TYPE: TM_UNION . ID

    ID  shift, and go to state 22


state 12

   16 DEF: TM_ENUM . ID '{' ENUM_LIST '}' ';'
   28 TYPE: TM_ENUM . ID

    ID  shift, and go to state 23


state 13

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 24


state 14

    1 NT_WHOLE: DEF_LIST .

    $default  reduce using rule 1 (NT_WHOLE)


state 15

    3 DEF_LIST: DEF . DEF_LIST

    TM_COMMENT      shift, and go to state 1
    COMMENT_HEADER  shift, and go to state 2
    VOID            shift, and go to state 3
    CHAR            shift, and go to state 4
    INT             shift, and go to state 5
    INT64           shift, and go to state 6
    U8              shift, and go to state 7
    UINT            shift, and go to state 8
    UINT64          shift, and go to state 9
    TM_STRUCT       shift, and go to state 10
    TM_UNION        shift, and go to state 11
    TM_ENUM         shift, and go to state 12

    $default  reduce using rule 2 (DEF_LIST)

    DEF_LIST  go to state 25
    DEF       go to state 15
    TYPE      go to state 16
    VARDEC    go to state 17
    ASEPDEF   go to state 18


state 16

    6 DEF: TYPE . ID '(' VARDEC_LIST ')' AFUNCDEF '{' CMD_LIST '}'
    7    | TYPE . ID '(' VARDEC_LIST ')' '{' CMD_LIST '}'
    8    | TYPE . ID '(' ')' AFUNCDEF '{' CMD_LIST '}'
    9    | TYPE . ID '(' ')' '{' CMD_LIST '}'
   10    | TYPE . ID '(' VARDEC_LIST ')' AFUNCDEF ';'
   11    | TYPE . ID '(' VARDEC_LIST ')' ';'
   12    | TYPE . ID '(' ')' AFUNCDEF ';'
   13    | TYPE . ID '(' ')' ';'
   29 TYPE: TYPE . ID '[' EXPRTYPE ']'
   30     | TYPE . '*'
   82 VARDEC: TYPE . ID

    ID   shift, and go to state 26
    '*'  shift, and go to state 27


state 17

   18 DEF: VARDEC . ';'

    ';'  shift, and go to state 28


state 18

   14 DEF: ASEPDEF .

    $default  reduce using rule 14 (DEF)


state 19

  130 ASEPDEF: TM_COMMENT LET . ID '(' EXPR_LIST ')' '=' RASSERTION TM_NEWLINE

    ID  shift, and go to state 29


state 20

  129 ASEPDEF: COMMENT_HEADER LET . ID '(' EXPR_LIST ')' '=' RASSERTION COMMENT_TAIL

    ID  shift, and go to state 30


state 21

   17 DEF: TM_STRUCT ID . '{' FIELD_DEC_LIST '}' ';'
   26 TYPE: TM_STRUCT ID .

    '{'  shift, and go to state 31

    $default  reduce using rule 26 (TYPE)


state 22

   15 DEF: TM_UNION ID . '{' FIELD_DEC_LIST '}' ';'
   27 TYPE: TM_UNION ID .

    '{'  shift, and go to state 32

    $default  reduce using rule 27 (TYPE)


state 23

   16 DEF: TM_ENUM ID . '{' ENUM_LIST '}' ';'
   28 TYPE: TM_ENUM ID .

    '{'  shift, and go to state 33

    $default  reduce using rule 28 (TYPE)


state 24

    0 $accept: NT_WHOLE $end .

    $default  accept


state 25

    3 DEF_LIST: DEF DEF_LIST .

    $default  reduce using rule 3 (DEF_LIST)


state 26

    6 DEF: TYPE ID . '(' VARDEC_LIST ')' AFUNCDEF '{' CMD_LIST '}'
    7    | TYPE ID . '(' VARDEC_LIST ')' '{' CMD_LIST '}'
    8    | TYPE ID . '(' ')' AFUNCDEF '{' CMD_LIST '}'
    9    | TYPE ID . '(' ')' '{' CMD_LIST '}'
   10    | TYPE ID . '(' VARDEC_LIST ')' AFUNCDEF ';'
   11    | TYPE ID . '(' VARDEC_LIST ')' ';'
   12    | TYPE ID . '(' ')' AFUNCDEF ';'
   13    | TYPE ID . '(' ')' ';'
   29 TYPE: TYPE ID . '[' EXPRTYPE ']'
   82 VARDEC: TYPE ID .

    '('  shift, and go to state 34
    '['  shift, and go to state 35

    $default  reduce using rule 82 (VARDEC)


state 27

   30 TYPE: TYPE '*' .

    $default  reduce using rule 30 (TYPE)


state 28

   18 DEF: VARDEC ';' .

    $default  reduce using rule 18 (DEF)


state 29

  130 ASEPDEF: TM_COMMENT LET ID . '(' EXPR_LIST ')' '=' RASSERTION TM_NEWLINE

    '('  shift, and go to state 36


state 30

  129 ASEPDEF: COMMENT_HEADER LET ID . '(' EXPR_LIST ')' '=' RASSERTION COMMENT_TAIL

    '('  shift, and go to state 37


state 31

   17 DEF: TM_STRUCT ID '{' . FIELD_DEC_LIST '}' ';'

    VOID       shift, and go to state 3
    CHAR       shift, and go to state 4
    INT        shift, and go to state 5
    INT64      shift, and go to state 6
    U8         shift, and go to state 7
    UINT       shift, and go to state 8
    UINT64     shift, and go to state 9
    TM_STRUCT  shift, and go to state 38
    TM_UNION   shift, and go to state 39
    TM_ENUM    shift, and go to state 40

    $default  reduce using rule 131 (FIELD_DEC_LIST)

    TYPE            go to state 41
    FIELD_DEC_LIST  go to state 42
    FIELD_DEC       go to state 43


state 32

   15 DEF: TM_UNION ID '{' . FIELD_DEC_LIST '}' ';'

    VOID       shift, and go to state 3
    CHAR       shift, and go to state 4
    INT        shift, and go to state 5
    INT64      shift, and go to state 6
    U8         shift, and go to state 7
    UINT       shift, and go to state 8
    UINT64     shift, and go to state 9
    TM_STRUCT  shift, and go to state 38
    TM_UNION   shift, and go to state 39
    TM_ENUM    shift, and go to state 40

    $default  reduce using rule 131 (FIELD_DEC_LIST)

    TYPE            go to state 41
    FIELD_DEC_LIST  go to state 44
    FIELD_DEC       go to state 43


state 33

   16 DEF: TM_ENUM ID '{' . ENUM_LIST '}' ';'

    ID  shift, and go to state 45

    ENUM_LIST  go to state 46


state 34

    6 DEF: TYPE ID '(' . VARDEC_LIST ')' AFUNCDEF '{' CMD_LIST '}'
    7    | TYPE ID '(' . VARDEC_LIST ')' '{' CMD_LIST '}'
    8    | TYPE ID '(' . ')' AFUNCDEF '{' CMD_LIST '}'
    9    | TYPE ID '(' . ')' '{' CMD_LIST '}'
   10    | TYPE ID '(' . VARDEC_LIST ')' AFUNCDEF ';'
   11    | TYPE ID '(' . VARDEC_LIST ')' ';'
   12    | TYPE ID '(' . ')' AFUNCDEF ';'
   13    | TYPE ID '(' . ')' ';'

    ')'        shift, and go to state 47
    VOID       shift, and go to state 3
    CHAR       shift, and go to state 4
    INT        shift, and go to state 5
    INT64      shift, and go to state 6
    U8         shift, and go to state 7
    UINT       shift, and go to state 8
    UINT64     shift, and go to state 9
    TM_STRUCT  shift, and go to state 38
    TM_UNION   shift, and go to state 39
    TM_ENUM    shift, and go to state 40

    TYPE         go to state 48
    VARDEC       go to state 49
    VARDEC_LIST  go to state 50


state 35

   29 TYPE: TYPE ID '[' . EXPRTYPE ']'

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE  go to state 61


state 36

  130 ASEPDEF: TM_COMMENT LET ID '(' . EXPR_LIST ')' '=' RASSERTION TM_NEWLINE

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE   go to state 62
    EXPR_LIST  go to state 63


state 37

  129 ASEPDEF: COMMENT_HEADER LET ID '(' . EXPR_LIST ')' '=' RASSERTION COMMENT_TAIL

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE   go to state 62
    EXPR_LIST  go to state 64


state 38

   26 TYPE: TM_STRUCT . ID

    ID  shift, and go to state 65


state 39

   27 TYPE: TM_UNION . ID

    ID  shift, and go to state 66


state 40

   28 TYPE: TM_ENUM . ID

    ID  shift, and go to state 67


state 41

   29 TYPE: TYPE . ID '[' EXPRTYPE ']'
   30     | TYPE . '*'
  133 FIELD_DEC: TYPE . ID ';'

    ID   shift, and go to state 68
    '*'  shift, and go to state 27


state 42

   17 DEF: TM_STRUCT ID '{' FIELD_DEC_LIST . '}' ';'

    '}'  shift, and go to state 69


state 43

  132 FIELD_DEC_LIST: FIELD_DEC . FIELD_DEC_LIST

    VOID       shift, and go to state 3
    CHAR       shift, and go to state 4
    INT        shift, and go to state 5
    INT64      shift, and go to state 6
    U8         shift, and go to state 7
    UINT       shift, and go to state 8
    UINT64     shift, and go to state 9
    TM_STRUCT  shift, and go to state 38
    TM_UNION   shift, and go to state 39
    TM_ENUM    shift, and go to state 40

    $default  reduce using rule 131 (FIELD_DEC_LIST)

    TYPE            go to state 41
    FIELD_DEC_LIST  go to state 70
    FIELD_DEC       go to state 43


state 44

   15 DEF: TM_UNION ID '{' FIELD_DEC_LIST . '}' ';'

    '}'  shift, and go to state 71


state 45

  125 ENUM_LIST: ID .
  126          | ID . ',' ENUM_LIST

    ','  shift, and go to state 72

    $default  reduce using rule 125 (ENUM_LIST)


state 46

   16 DEF: TM_ENUM ID '{' ENUM_LIST . '}' ';'

    '}'  shift, and go to state 73


state 47

    8 DEF: TYPE ID '(' ')' . AFUNCDEF '{' CMD_LIST '}'
    9    | TYPE ID '(' ')' . '{' CMD_LIST '}'
   12    | TYPE ID '(' ')' . AFUNCDEF ';'
   13    | TYPE ID '(' ')' . ';'

    ';'             shift, and go to state 74
    '{'             shift, and go to state 75
    COMMENT_HEADER  shift, and go to state 76

    AFUNCDEF  go to state 77


state 48

   29 TYPE: TYPE . ID '[' EXPRTYPE ']'
   30     | TYPE . '*'
   82 VARDEC: TYPE . ID

    ID   shift, and go to state 78
    '*'  shift, and go to state 27


state 49

   83 VARDEC_LIST: VARDEC .

    $default  reduce using rule 83 (VARDEC_LIST)


state 50

    6 DEF: TYPE ID '(' VARDEC_LIST . ')' AFUNCDEF '{' CMD_LIST '}'
    7    | TYPE ID '(' VARDEC_LIST . ')' '{' CMD_LIST '}'
   10    | TYPE ID '(' VARDEC_LIST . ')' AFUNCDEF ';'
   11    | TYPE ID '(' VARDEC_LIST . ')' ';'
   84 VARDEC_LIST: VARDEC_LIST . ',' VARDEC

    ')'  shift, and go to state 79
    ','  shift, and go to state 80


state 51

   85 EXPRTYPE: NAT .

    $default  reduce using rule 85 (EXPRTYPE)


state 52

   87 EXPRTYPE: ID .
  110         | ID . '(' EXPR_LIST ')'
  111         | ID . '(' ')'

    '('  shift, and go to state 81

    $default  reduce using rule 87 (EXPRTYPE)


state 53

   86 EXPRTYPE: '(' . EXPRTYPE ')'
  115         | '(' . TYPE ')' EXPRTYPE

    NAT        shift, and go to state 51
    ID         shift, and go to state 52
    '('        shift, and go to state 53
    '+'        shift, and go to state 54
    '-'        shift, and go to state 55
    '*'        shift, and go to state 56
    '!'        shift, and go to state 57
    '&'        shift, and go to state 58
    '~'        shift, and go to state 59
    SIZEOF     shift, and go to state 60
    VOID       shift, and go to state 3
    CHAR       shift, and go to state 4
    INT        shift, and go to state 5
    INT64      shift, and go to state 6
    U8         shift, and go to state 7
    UINT       shift, and go to state 8
    UINT64     shift, and go to state 9
    TM_STRUCT  shift, and go to state 38
    TM_UNION   shift, and go to state 39
    TM_ENUM    shift, and go to state 40

    TYPE      go to state 82
    EXPRTYPE  go to state 83


state 54

   89 EXPRTYPE: '+' . EXPRTYPE

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE  go to state 84


state 55

   88 EXPRTYPE: '-' . EXPRTYPE

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE  go to state 85


state 56

  113 EXPRTYPE: '*' . EXPRTYPE

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE  go to state 86


state 57

   90 EXPRTYPE: '!' . EXPRTYPE

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE  go to state 87


state 58

  114 EXPRTYPE: '&' . EXPRTYPE

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE  go to state 88


state 59

   91 EXPRTYPE: '~' . EXPRTYPE

    NAT     shift, and go to state 51
    ID      shift, and go to state 52
    '('     shift, and go to state 53
    '+'     shift, and go to state 54
    '-'     shift, and go to state 55
    '*'     shift, and go to state 56
    '!'     shift, and go to state 57
    '&'     shift, and go to state 58
    '~'     shift, and go to state 59
    SIZEOF  shift, and go to state 60

    EXPRTYPE  go to state 89


state 60

  112 EXPRTYPE: SIZEOF . '(' TYPE ')'

    '('  shift, and go to state 90


state 61
